--- a/main.html
+++ b/main.html
@@ -4,10 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+.button{
+	background-color: black;
+	color:white;
+	border-radius:5px;
+	font-size: 30px;
+
+
+}
+
+	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<button class="button">Button</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
