--- a/main.html
+++ b/main.html
@@ -8,8 +8,10 @@
 .button{
 	background-color: black;
 	color:white;
-	border-radius:5px;
+	border-radius:solid 5px;
 	font-size: 30px;
+	border:5px yellow;
+	
 
 
 }
