--- a/main.html
+++ b/main.html
@@ -4,24 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
-.button{
-	background-color: black;
-	color:white;
-	border-radius:solid 5px;
-	font-size: 30px;
-	border:5px yellow;
 	
-
-
-}
-
-	</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<button class="button">Button</button>
+	<button id="btn" class="button" type="submit">Button</button>
     <script type="text/javascript" src="./script.js">
 </script>
 
